--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "vue": "^3.5.13",
     "vue-json-editor": "^1.4.3",
     "vue-json-pretty": "^2.2.4",
+    "vuedraggable": "^4.1.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
